<resources>
    <string name="app_name">Worldforge RPG Tools</string>
    <string name="save_generator_results_button">Save Results</string>
    <string name="create_generator_title">Create a New Random Table</string>
    <string name="create_generator_category">Category</string>
    <string name="create_generator_name">Name</string>
    <string name="add_generator_possible_result_button">Create New Possible Result</string>
    <string name="submit_button">Submit</string>
    <string name="generated_results_table_header_col_1">Quantity</string>
    <string name="generated_results_table_header_col_2">Name</string>
    <string name="num_generator_results_dialog_title">Number of Results</string>
    <string name="select_category_button">Select</string>
    <string name="textview_currently_selected_category_label">Selected Path:</string>
    <string name="create_new_generator_menu_item">Create New Generator</string>
    <string name="title_new_generator_name">New Generator</string>
    <string name="message_new_generator_name">Enter a name</string>
    <string name="generator_template_label_text">Templates</string>
    <string name="result_item_details_title">Add details for "%s"</string>
    <string name="result_item_details_add_row_button_text">Add Field</string>
    <string name="new_generator_successfully_created_at_subfolder_message">Created %s at %s</string>
    <string name="new_generator_successfully_created_message">Created %s</string>
    <string name="distribution_1d4">1d4</string>
    <string name="distribution_1d6">1d6</string>
    <string name="distribution_1d8">1d8</string>
    <string name="distribution_1d10">1d10</string>
    <string name="distribution_1d12">1d12</string>
    <string name="distribution_1d20">1d20</string>
    <string name="distribution_d100">d100</string>
    <string name="distribution_2d6">2d6</string>
    <string name="distribution_3d6">3d6</string>
</resources>
