<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:grid="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/create_generator_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_generator_title"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/create_generator_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_generator_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_generator_name"/>

    <TextView
        android:id="@+id/edit_text_create_generator_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/editTextColor"
        android:background="?attr/editTextBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_generator_category"
        app:layout_constraintTop_toBottomOf="@+id/create_generator_name"/>

    <EditText
        android:id="@+id/edit_text_create_generator_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_generator_name"
        app:layout_constraintTop_toBottomOf="@id/create_generator_title"/>

    <TextView
        android:id="@+id/create_generator_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_generator_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_generator_title"/>

    <Button
        android:id="@+id/create_generator_button_submit_new_generator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/submit_new_generator_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/create_generator_template_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generator_template_label_text"
        app:layout_constraintTop_toBottomOf="@id/create_generator_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        grid:columnCount="3"
        app:layout_constraintTop_toBottomOf="@id/create_generator_template_label"
        app:layout_constraintBottom_toTopOf="@id/create_generator_button_submit_new_generator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d4"
            android:drawableTop="@drawable/ic_generate_results"
        />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d6"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d8"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d10"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d12"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_1d20"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_2d6"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_3d6"
            android:drawableTop="@drawable/ic_generate_results"
            />
        <TextView
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/distribution_d100"
            android:drawableTop="@drawable/ic_generate_results"
            />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>